k8s/apps/fraternity/fraternity-api/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraternity-api
spec:
  replicas: 5
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: fraternity-api
  template:
    metadata:
      labels:
        component: fraternity-api
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: app
          image: ghcr.io/gastbob40/fraternity-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
