k8s/apps/fraternity/fraternity-api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fraternity-api
spec:
  type: ClusterIP
  selector:
    component: fraternity-api
  ports:
    - name: http
      port: 80
      targetPort: http
