k8s/apps/fraternity/fraternity-api/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraternity-api
  namespace: fraternity
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    cert-manager.io/revision-history-limit: "1"
spec:
  ingressClassName: public
  rules:
    - host: "fraternity.gastbob40.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fraternity-api
                port:
                  number: 80
  tls:
    - hosts:
        - "fraternity.gastbob40.com"
      secretName: "fraternity-api-tls"
